_assets/css/scss/pages/_blog.scss
//**
// Blog
//**

.container--blog {
  margin-bottom: $padding;
  max-width: 800px;
}

.header--blog {
  position: fixed;
  top: 0;
  width: 100%;
}

.blog-meta {
  color: $subtle-color;
  font-size: 14px;
  text-align: center;
}

.blog--image {
  margin-left: -40px;
  margin-right: -40px;
  text-align: center;
}

.posts {
  list-style: none;
  margin: $padding/2 0;
  padding: 0;

  li {
    margin: 0;
    padding: 5px 0;

    // &:first-child {
    //   .post__title {
    //     border-top: 1px solid rgba($subtle-color, .2);
    //   }
    // }
  }

  .post__title {
    // border-bottom: 1px solid rgba($subtle-color, .2);
    // display: block;
    // padding: 5px;
    // text-decoration: none;

    // &:hover {
    //   background: rgba($subtle-color, .1)
    // }
  }

  .post__date {
    color: $grey40;
    text-decoration: none;
  }
}

// Feature posts

.featured-posts {
  display: flex;
  margin-bottom: $padding;

  a {
    color: inherit;
    text-decoration: none;
  }

  .post { 
    box-shadow: 0 0 20px rgba(0, 0, 0, .05);
    height: 100%;
    transition: all .2s ease-in-out;

    &__content {
      padding: 10px;
    }

    &:hover {
      transform: scale(1.05);
      z-index: 10;
    }
  }
}





// Social sharing

.social-sharing-container {
  margin-bottom: $padding/2;
}





// Subscribe footer of post
.post-subscribe {
  background: $grey80;
  border-radius: $br;
  color: #fff;
  margin-bottom: $padding/4;
  padding: 20px;
  text-align: center;

  form {
    margin-bottom: $padding/4;
  }

  h3 {
    color: inherit;

    &:after {
      background: none;
      height: 0;
    }
  }
}

// Mobile first styles if needed
// @include mobilefirst($big-break) {
// }
@include responsive($small-break) {
  .header {
    position: relative;
    top: auto;
  }

  .container--blog {
    padding-top: 0;

    h1 {
      font-size: 28px;
      margin-top: 20px;
    }
  }
}

